# bad_chaos_magic

./: LICENSE  README.md  bad_chaos_magic.yar  pyproject.toml
bad_chaos_magic/: __init__.py  __main__.py
bad_chaos_magic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analyze_file.py  test_compute_hashes.py  test_ignore_filter.py  test_language_guesser.py  test_main.py  test_measure_entropy.py
